[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/Rankings Popup Container.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/RobotoBold24.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/RobotoBold18.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Rankings.gd" type="Script" id=4]
[ext_resource path="res://scenes/menus/MenuButton.tscn" type="PackedScene" id=5]

[node name="Rankings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIPanel" type="TextureRect" parent="CenterContainer"]
margin_left = 246.0
margin_top = 121.0
margin_right = 714.0
margin_bottom = 418.0
texture = ExtResource( 1 )

[node name="ColorRectLeft" type="ColorRect" parent="CenterContainer/UIPanel"]
margin_left = 14.0
margin_top = 12.0
margin_right = 164.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 26 )
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectRight" type="ColorRect" parent="CenterContainer/UIPanel"]
margin_left = 304.0
margin_top = 12.0
margin_right = 454.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 26 )
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 178.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Rankings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankLines" type="VBoxContainer" parent="CenterContainer/UIPanel"]
margin_left = 61.0
margin_top = 51.0
margin_right = 406.0
margin_bottom = 91.0
rect_min_size = Vector2( 345, 168 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_right = 345.0
margin_bottom = 24.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/1"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$10,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 24.0
margin_right = 345.0
margin_bottom = 48.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/2"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$1,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 48.0
margin_right = 345.0
margin_bottom = 72.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/3"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 72.0
margin_right = 345.0
margin_bottom = 96.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/4"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 96.0
margin_right = 345.0
margin_bottom = 120.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/5"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 120.0
margin_right = 345.0
margin_bottom = 144.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/6"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="HBoxContainer" parent="CenterContainer/UIPanel/RankLines"]
margin_top = 144.0
margin_right = 345.0
margin_bottom = 168.0
custom_constants/separation = 38

[node name="Rank" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_right = 22.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "#7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 60.0
margin_right = 170.0
margin_bottom = 24.0
rect_min_size = Vector2( 110, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "KURTSJDKSL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 208.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 11, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Earnings" type="Label" parent="CenterContainer/UIPanel/RankLines/7"]
margin_left = 257.0
margin_right = 345.0
margin_bottom = 24.0
rect_min_size = Vector2( 88, 24 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "$100,000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundsRemaining" type="Label" parent="CenterContainer/UIPanel"]
margin_left = 147.0
margin_top = 223.0
margin_right = 323.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "1 round remains."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" parent="CenterContainer/UIPanel" instance=ExtResource( 5 )]
margin_left = 203.0
margin_top = 247.0
margin_right = 265.0
margin_bottom = 285.0
rect_min_size = Vector2( 62, 38 )

[node name="Label" parent="CenterContainer/UIPanel/OkButton" index="1"]
custom_fonts/font = ExtResource( 3 )
text = "OK"

[connection signal="pressed" from="CenterContainer/UIPanel/OkButton/Button" to="." method="_on_OkButton_pressed"]

[editable path="CenterContainer/UIPanel/OkButton"]
